--- a/skins/hu.css
+++ b/skins/hu.css
@@ -12,8 +12,8 @@ Version 2.0.0
 .hu-css .vjs-controls > div {
   top: 0;
   background: none;
-  border-radius: 0; -webkit-border-radius: 0; -moz-border-radius: 0;
-  box-shadow: none; -webkit-box-shadow: none; -moz-box-shadow: none;
+  -webkit-border-radius: 0; -moz-border-radius: 0; border-radius: 0;
+  -webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none;
 }
 
 /* Top Level Items */
@@ -46,9 +46,9 @@ Version 2.0.0
   height: 19px; border: none;
   margin: 0px 0px 0 0px; /* Placement within the progress control item */
   background: #000;
-  border-radius: 0; -webkit-border-radius: 0; -moz-border-radius: 0;
+  -webkit-border-radius: 0; -moz-border-radius: 0; border-radius: 0;
 }
-.hu-css .vjs-progress-holder div { height: 13px; margin-top: 3px; border-radius: 0; -webkit-border-radius: 0; -moz-border-radius: 0; }
+.hu-css .vjs-progress-holder div { height: 13px; margin-top: 3px; -webkit-border-radius: 0; -moz-border-radius: 0; border-radius: 0; }
 .hu-css .vjs-play-progress {
   /* Default */ background: #777;
   /* Webkit  */ background: -webkit-gradient(linear, left top, left bottom, from(#999), to(#777));
@@ -97,15 +97,15 @@ Version 2.0.0
 .hu-css div.vjs-big-play-button {
   width: 76px; height: 70px; margin: -35px 0 0 -38px;
   border: 1px solid #ccc; opacity: 0.8;
-  border-radius: 0px; -webkit-border-radius: 0px; -moz-border-radius: 0px;
+  -webkit-border-radius: 0px; -moz-border-radius: 0px; border-radius: 0px;
 
   background: rgba(50,50,50,0.8);
 
   /* CSS Shadows */
-  box-shadow: none; -webkit-box-shadow: none; -moz-box-shadow: none;
+  -webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none;
 }
 .hu-css div.vjs-big-play-button:hover {
-  box-shadow: 0px 0px 80px #fff; -webkit-box-shadow: 0px 0px 80px #fff; -moz-box-shadow: 0px 0px 80px #fff;
+  -webkit-box-shadow: 0px 0px 80px #fff; -moz-box-shadow: 0px 0px 80px #fff; box-shadow: 0px 0px 80px #fff;
 }
 .hu-css div.vjs-big-play-button span {
   margin: 16px 0 0 21px;
