Added strict opacity on hide/show

--- a/video-js.css
+++ b/video-js.css
@@ -59,13 +59,13 @@ so you can upgrade to newer versions easier. */
 }
 
 .vjs-hide {
-  opacity: 0;
+  opacity: 0 !important;
   -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; /* IE8 */
   filter: alpha(opacity=0); /* IE5-7 */
 }
 
 .vjs-show {
-  opacity: 1;
+  opacity: 1 !important;
   -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; /* IE8 */
   filter: alpha(opacity=100); /* IE5-7 */
 }
