--- a/video-js.css
+++ b/video-js.css
@@ -51,23 +51,6 @@ so you can upgrade to newer versions easier. */
   bottom: 0px; /* Distance from the bottom of the box/video. Keep 0. Use height to add more bottom margin. */
   height: 35px; /* Including any margin you want above or below control items */
   padding: 0; /* Controls are absolutely position, so no padding necessary */
-  -webkit-transition: opacity 0.5s linear;
-  -moz-transition: opacity 0.5s linear;
-  -o-transition: opacity 0.5s linear;
-  -ms-transition: opacity 0.5s linear;
-  transition: opacity 0.5s linear;
-}
-
-.vjs-hide {
-  opacity: 0 !important;
-  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; /* IE8 */
-  filter: alpha(opacity=0); /* IE5-7 */
-}
-
-.vjs-show {
-  opacity: 1 !important;
-  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; /* IE8 */
-  filter: alpha(opacity=100); /* IE5-7 */
 }
 
 .video-js-box .vjs-controls > div { /* Direct div children of control bar */
@@ -83,10 +66,10 @@ so you can upgrade to newer versions easier. */
   /* Firefox */ background: #1F3744 -moz-linear-gradient(top,  #0B151A,  #1F3744) left 12px;
 
   /* CSS Curved Corners */
-  -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px;
+  border-radius: 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px;
 
   /* CSS Shadows */
-  -webkit-box-shadow: 1px 1px 2px #000; -moz-box-shadow: 1px 1px 2px #000; box-shadow: 1px 1px 2px #000;
+  box-shadow: 1px 1px 2px #000; -webkit-box-shadow: 1px 1px 2px #000; -moz-box-shadow: 1px 1px 2px #000;
 }
 
 /* Placement of Control Items 
@@ -94,19 +77,20 @@ so you can upgrade to newer versions easier. */
    - Rigth side of progress bar, use right & width
    - Expand with the video (like progress bar) use left & right */
 .vjs-controls > div.vjs-play-control       { left: 5px;   width: 25px;  }
-.vjs-controls > div.vjs-progress-control   { left: 35px;  right: 165px; } /* Using left & right so it expands with the width of the video */
-.vjs-controls > div.vjs-time-control       { width: 75px; right: 90px;  } /* Time control and progress bar are combined to look like one */
+.vjs-controls > div.vjs-progress-control   { left: 35px;  right: 195px; } /* Using left & right so it expands with the width of the video */
+.vjs-controls > div.vjs-time-control       { width: 75px; right: 120px;  } /* Time control and progress bar are combined to look like one */
+.vjs-controls > div.vjs-mute-control     { width: 25px; right: 90px;  }
 .vjs-controls > div.vjs-volume-control     { width: 50px; right: 35px;  }
 .vjs-controls > div.vjs-fullscreen-control { width: 25px; right: 5px;   }
 
 /* Removing curved corners on progress control and time control to join them. */
 .vjs-controls > div.vjs-progress-control {
-  -webkit-border-top-right-radius: 0; -moz-border-radius-topright: 0; border-top-right-radius: 0;
-  -webkit-border-bottom-right-radius: 0; -moz-border-radius-bottomright: 0; border-bottom-right-radius: 0;
+  border-top-right-radius: 0; -webkit-border-top-right-radius: 0; -moz-border-radius-topright: 0;
+  border-bottom-right-radius: 0; -webkit-border-bottom-right-radius: 0; -moz-border-radius-bottomright: 0;
 }
 .vjs-controls > div.vjs-time-control { 
-  -webkit-border-top-left-radius: 0; -moz-border-radius-topleft: 0; border-top-left-radius: 0;
-  -webkit-border-bottom-left-radius: 0; -moz-border-radius-bottomleft: 0; border-bottom-left-radius: 0;
+  border-top-left-radius: 0; -webkit-border-top-left-radius: 0; -moz-border-radius-topleft: 0;
+  border-bottom-left-radius: 0; -webkit-border-bottom-left-radius: 0; -moz-border-radius-bottomleft: 0;
 }
 
 /* Play/Pause
@@ -133,11 +117,11 @@ so you can upgrade to newer versions easier. */
   position: relative; padding: 0; overflow:hidden; cursor: pointer !important;
   height: 9px; border: 1px solid #777;
   margin: 7px 1px 0 5px; /* Placement within the progress control item */
-  -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px;
+  border-radius: 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px;
 }
 .vjs-progress-holder div { /* Progress Bars */
   position: absolute; display: block; width: 0; height: 9px; margin: 0; padding: 0;
-  -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px;
+  border-radius: 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px;
 }
 .vjs-play-progress {
   /* CSS Gradient */
@@ -157,6 +141,19 @@ so you can upgrade to newer versions easier. */
 -------------------------------------------------------------------------------- */
 .vjs-controls .vjs-time-control { font-size: 10px; line-height: 1; font-weight: normal; font-family: Helvetica, Arial, sans-serif; }
 .vjs-controls .vjs-time-control span { line-height: 25px; /* Centering vertically */ }
+
+/* Volume Mute
+-------------------------------------------------------------------------------- */
+.vjs-mute-control  { cursor: pointer !important; }
+.vjs-mute-control span:nth-child(1){ position: absolute; left: 5px; top: 9px;   width: 5px; height: 8px; background: #fff; z-index: 2;}
+.vjs-mute-control span:nth-child(2){ position: absolute; left: 5px; top: 5px; width: 0; height: 0; border-right: 10px solid #fff; border-top: 8px solid transparent; border-bottom: 8px solid transparent; z-index: 1;}
+.vjs-mute-control span:nth-child(3){ border: 1px solid #fff; border-radius: 25px; display: block; height: 16px; position: absolute; left: 4px; top: 4px; width: 17px;}
+.vjs-mute-control span:nth-child(4){	border: 1px solid #fff; border-radius: 25px; display: block; height: 10px; position: absolute; left: 9px; top: 7px; width: 9px;}
+.vjs-mute-control span:nth-child(5){ position: absolute; display: block; height: 21px; width: 13px; left: 5px; top: 2px;
+  /* Default */ background-color: #0B151A;
+  /* Webkit  */ background: #1F3744 -webkit-gradient(linear, left top, left bottom, from(#0B151A), to(#1F3744)) left 10px;
+  /* Firefox */ background: #1F3744 -moz-linear-gradient(top,  #0B151A,  #1F3744) left 10px;}
+.vjs-mute .vjs-mute-control span:nth-child(5){ width: 18px;}
 
 /* Volume
 -------------------------------------------------------------------------------- */
@@ -213,7 +210,7 @@ div.vjs-big-play-button {
   display: none; /* Start hidden */ z-index: 2;
   position: absolute; top: 50%; left: 50%; width: 80px; height: 80px; margin: -43px 0 0 -43px; text-align: center; vertical-align: center; cursor: pointer !important;
   border: 3px solid #fff; opacity: 0.9;
-  -webkit-border-radius: 20px; -moz-border-radius: 20px; border-radius: 20px;
+  border-radius: 20px; -webkit-border-radius: 20px; -moz-border-radius: 20px;
   
   /* CSS Background Gradients */
   /* Default */ background-color: #0B151A;
@@ -221,10 +218,10 @@ div.vjs-big-play-button {
   /* Firefox */ background: #1F3744 -moz-linear-gradient(top,  #0B151A,  #1F3744) left 40px;
 
   /* CSS Shadows */
-  -webkit-box-shadow: 4px 4px 8px #000; -moz-box-shadow: 4px 4px 8px #000; box-shadow: 4px 4px 8px #000;
+  box-shadow: 4px 4px 8px #000; -webkit-box-shadow: 4px 4px 8px #000; -moz-box-shadow: 4px 4px 8px #000;
 }
 div.vjs-big-play-button:hover {
-  -webkit-box-shadow: 0px 0px 80px #fff; -moz-box-shadow: 0px 0px 80px #fff; box-shadow: 0px 0px 80px #fff;
+  box-shadow: 0px 0px 80px #fff; -webkit-box-shadow: 0px 0px 80px #fff; -moz-box-shadow: 0px 0px 80px #fff;
 }
 
 div.vjs-big-play-button span {
@@ -241,19 +238,19 @@ div.vjs-big-play-button span {
 /* CSS Spinners by Kilian Valkhof - http://kilianvalkhof.com/2010/css-xhtml/css3-loading-spinners-without-images/ */
 .vjs-spinner { display: none; position: absolute; top: 50%; left: 50%; width: 100px; height: 100px; z-index: 1; margin: -50px 0 0 -50px;
   /* Scaling makes the circles look smoother. */
-  -webkit-transform:scale(0.5); -moz-transform:scale(0.5); transform: scale(0.5);
+  transform: scale(0.5); -webkit-transform:scale(0.5); -moz-transform:scale(0.5);
 }
 /* Spinner circles */
 .vjs-spinner div { position:absolute; left: 40px; top: 40px; width: 20px; height: 20px; background: #fff;
-  -webkit-border-radius: 20px; -moz-border-radius: 20px; border-radius: 20px;
+  border-radius: 20px; -webkit-border-radius: 20px; -moz-border-radius: 20px;
   border: 1px solid #ccc; /* Added border so can be visible on white backgrounds */
 }
 /* Each circle */
-.vjs-spinner div:nth-child(1) { opacity: 0.12; -webkit-transform: rotate(000deg) translate(0, -40px) scale(0.1); -moz-transform: rotate(000deg) translate(0, -40px) scale(0.1); transform: rotate(000deg) translate(0, -40px) scale(0.1); }
-.vjs-spinner div:nth-child(2) { opacity: 0.25; -webkit-transform: rotate(045deg) translate(0, -40px) scale(0.2); -moz-transform: rotate(045deg) translate(0, -40px) scale(0.2); transform: rotate(045deg) translate(0, -40px) scale(0.2); }
-.vjs-spinner div:nth-child(3) { opacity: 0.37; -webkit-transform: rotate(090deg) translate(0, -40px) scale(0.4); -moz-transform: rotate(090deg) translate(0, -40px) scale(0.4); transform: rotate(090deg) translate(0, -40px) scale(0.4); }
-.vjs-spinner div:nth-child(4) { opacity: 0.50; -webkit-transform: rotate(135deg) translate(0, -40px) scale(0.6); -moz-transform: rotate(135deg) translate(0, -40px) scale(0.6); transform: rotate(135deg) translate(0, -40px) scale(0.6); }
-.vjs-spinner div:nth-child(5) { opacity: 0.62; -webkit-transform: rotate(180deg) translate(0, -40px) scale(0.8); -moz-transform: rotate(180deg) translate(0, -40px) scale(0.8); transform: rotate(180deg) translate(0, -40px) scale(0.8); }
-.vjs-spinner div:nth-child(6) { opacity: 0.75; -webkit-transform: rotate(225deg) translate(0, -40px) scale(1.0); -moz-transform: rotate(225deg) translate(0, -40px) scale(1.0); transform: rotate(225deg) translate(0, -40px) scale(1.0); }
-.vjs-spinner div:nth-child(7) { opacity: 0.87; -webkit-transform: rotate(270deg) translate(0, -40px) scale(1.1); -moz-transform: rotate(270deg) translate(0, -40px) scale(1.1); transform: rotate(270deg) translate(0, -40px) scale(1.1); }
-.vjs-spinner div:nth-child(8) { opacity: 1.00; -webkit-transform: rotate(315deg) translate(0, -40px) scale(1.3); -moz-transform: rotate(315deg) translate(0, -40px) scale(1.3); transform: rotate(315deg) translate(0, -40px) scale(1.3); }
+.vjs-spinner div:nth-child(1) { opacity: 0.12; transform: rotate(000deg) translate(0, -40px) scale(0.1); -webkit-transform: rotate(000deg) translate(0, -40px) scale(0.1); -moz-transform: rotate(000deg) translate(0, -40px) scale(0.1); }
+.vjs-spinner div:nth-child(2) { opacity: 0.25; transform: rotate(045deg) translate(0, -40px) scale(0.2); -webkit-transform: rotate(045deg) translate(0, -40px) scale(0.2); -moz-transform: rotate(045deg) translate(0, -40px) scale(0.2); }
+.vjs-spinner div:nth-child(3) { opacity: 0.37; transform: rotate(090deg) translate(0, -40px) scale(0.4); -webkit-transform: rotate(090deg) translate(0, -40px) scale(0.4); -moz-transform: rotate(090deg) translate(0, -40px) scale(0.4); }
+.vjs-spinner div:nth-child(4) { opacity: 0.50; transform: rotate(135deg) translate(0, -40px) scale(0.6); -webkit-transform: rotate(135deg) translate(0, -40px) scale(0.6); -moz-transform: rotate(135deg) translate(0, -40px) scale(0.6); }
+.vjs-spinner div:nth-child(5) { opacity: 0.62; transform: rotate(180deg) translate(0, -40px) scale(0.8); -webkit-transform: rotate(180deg) translate(0, -40px) scale(0.8); -moz-transform: rotate(180deg) translate(0, -40px) scale(0.8); }
+.vjs-spinner div:nth-child(6) { opacity: 0.75; transform: rotate(225deg) translate(0, -40px) scale(1.0); -webkit-transform: rotate(225deg) translate(0, -40px) scale(1.0); -moz-transform: rotate(225deg) translate(0, -40px) scale(1.0); }
+.vjs-spinner div:nth-child(7) { opacity: 0.87; transform: rotate(270deg) translate(0, -40px) scale(1.1); -webkit-transform: rotate(270deg) translate(0, -40px) scale(1.1); -moz-transform: rotate(270deg) translate(0, -40px) scale(1.1); }
+.vjs-spinner div:nth-child(8) { opacity: 1.00; transform: rotate(315deg) translate(0, -40px) scale(1.3); -webkit-transform: rotate(315deg) translate(0, -40px) scale(1.3); -moz-transform: rotate(315deg) translate(0, -40px) scale(1.3); }
