--- a/skins/vim.css
+++ b/skins/vim.css
@@ -13,8 +13,9 @@ Version 2.0.0
 }
 /* Placement of Control Items */
 .vim-css .vjs-controls > div.vjs-play-control       { width: 65px; left: 10px; }
-.vim-css .vjs-controls > div.vjs-progress-control   { left: 85px; right: 160px; }
-.vim-css .vjs-controls > div.vjs-time-control       { width: 75px; right: 85px; }
+.vim-css .vjs-controls > div.vjs-progress-control   { left: 85px; right: 185px; }
+.vim-css .vjs-controls > div.vjs-time-control       { width: 75px; right: 110px; }
+.vim-css .vjs-controls > div.vjs-mute-control       { right: 85px; }
 .vim-css .vjs-controls > div.vjs-volume-control     { width: 50px; right: 35px; }
 .vim-css .vjs-controls > div.vjs-fullscreen-control { width: 25px; right: 10px; }
 
@@ -36,6 +37,10 @@ Version 2.0.0
 -------------------------------------------------------------------------------- */
 .vim-css .vjs-controls .vjs-time-control { font-size: 11px; }
 .vim-css .vjs-controls .vjs-time-control span { line-height: 32px; /* Centering vertically */ }
+
+/* Volume Mute
+-------------------------------------------------------------------------------- */
+.vim-css .vjs-mute-control > div { top: 9px; left: 8px }
 
 /* Volume
 -------------------------------------------------------------------------------- */
